Added Auth Service and authenticated APIS

--- a/Server/AuthService/AuthService.API/AuthService.API.csproj
+++ b/Server/AuthService/AuthService.API/AuthService.API.csproj
@@ -12,8 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProductService.Application\ProductService.Application.csproj" />
-    <ProjectReference Include="..\ProductService.Infra\ProductService.Infra.csproj" />
+    <ProjectReference Include="..\AuthService.Application\AuthService.Application.csproj" />
+    <ProjectReference Include="..\AuthService.Core\AuthService.Core.csproj" />
+    <ProjectReference Include="..\AuthService.Infra\AuthService.Infra.csproj" />
   </ItemGroup>
 
 </Project>
