--- a/Server/AuthService/AuthService.API/Properties/launchSettings.json
+++ b/Server/AuthService/AuthService.API/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:58723",
-      "sslPort": 44388
+      "applicationUrl": "http://localhost:7512",
+      "sslPort": 44309
     }
   },
   "profiles": {
-    "ApiGateway": {
+    "AuthService.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "products",
-      "applicationUrl": "https://localhost:7268;http://localhost:5268",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7030;http://localhost:5030",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
