--- a/UI/crud-ui/package.json
+++ b/UI/crud-ui/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-jwt": "^1.2.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-sweetalert2": "^0.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
