--- a/UI/crud-ui/package.json
+++ b/UI/crud-ui/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-jwt": "^1.2.2",
     "react-router-dom": "^6.26.0",
