Changed the Logic from  Queue to topic

--- a/Server/OrderService/OrderService.API/appsettings.json
+++ b/Server/OrderService/OrderService.API/appsettings.json
@@ -15,8 +15,10 @@
     "Secret": "wftyCeDfwqYdsHkjhjhkjhkbddsdfsrt"
   },
   "AzureServiceBus": {
-    "ConnectionString": "your-service-bus-connection-string",
-    "ProductNameUpdateQueueName": "your-queue-name",
-    "OrderCountUpdateQueueName": ""
+    "ConnectionString": "",
+    "ProductNameUpdateQueueName": "productnameupdatequeue",
+    "OrderCountUpdateQueueName": "ordercountupdatequeue",
+    "ProductNameUpdateTopicName": "productnameupdates",
+    "SubscriptionName": "orderservice-subscription"
   }
 }
