--- a/Server/ProductService/ProductService.API/appsettings.json
+++ b/Server/ProductService/ProductService.API/appsettings.json
@@ -15,8 +15,9 @@
     "Secret": "wftyCeDfwqYdsHkjhjhkjhkbddsdfsrt"
   },
   "AzureServiceBus": {
-    "ConnectionString": "your-service-bus-connection-string",
-    "ProductNameUpdateQueueName": "your-queue-name",
-    "OrderCountUpdateQueueName": ""
+    "ConnectionString": "",
+    "ProductNameUpdateQueueName": "productnameupdatequeue",
+    "OrderCountUpdateQueueName": "ordercountupdatequeue",
+    "ProductNameUpdateTopicName": "productnameupdates"
   }
 }
